서버 이미지 노출되지 않는 이슈 해결 (경로에 static 추가)

--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -7,8 +7,8 @@
   <script src="/js/script.js"></script>
   <title>로그인 성공</title>
   <!-- FAVICON -->
-  <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
-  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/ico" href="/static/icons/favicon-16x16.ico" sizes="16x16">
+  <link rel="shortcut icon" href="/static/icons/favicon-16x16.ico" type="image/x-icon">
 
   <style>
     .btn {
