--- a/src/main/resources/templates/location.html
+++ b/src/main/resources/templates/location.html
@@ -3,8 +3,8 @@
 <head>
     <title>오늘 점심 뭐먹지?</title>
     <!-- FAVICON -->
-    <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
-    <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/ico" href="/static/icons/favicon-16x16.ico" sizes="16x16">
+    <link rel="shortcut icon" href="/static/icons/favicon-16x16.ico" type="image/x-icon">
 
     <meta charset="utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
@@ -86,7 +86,7 @@
 <div class="flex min-h-[100dvh] flex-col items-center justify-center bg-background px-4 py-12 sm:px-6 lg:px-8">
     <div class="mx-auto max-w-md text-center">
         <a href="/home">
-            <img src="/icons/favicon.png" alt="오늘 점심 뭐먹지? 로고" class="logo">
+            <img src="/static/icons/favicon.png" alt="오늘 점심 뭐먹지? 로고" class="logo">
         </a>
         <h1 class="my-8 text-4xl font-bold tracking-tight text-foreground">
             당신의 식사를 정해드려요
