--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>음식점 전체 조회</title>
   <!-- FAVICON -->
-  <link rel="icon" type="image/ico" href="/icons/favicon-16x16.ico" sizes="16x16">
-  <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/ico" href="/static/icons/favicon-16x16.ico" sizes="16x16">
+  <link rel="shortcut icon" href="/static/icons/favicon-16x16.ico" type="image/x-icon">
 
   <style>
     .container {
