--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -53,9 +53,9 @@
         </h1>
         <p class="mt-4 text-muted-foreground text-base">
             주변에 어떤 음식점이 있는 지 궁금하신가요?  <br>
-            저희가 알려드릴게요!
-            <br> <br>
-            본 서비스는 현위치를 기준으로 200M 이내의 음식점들을 추천하는 서비스에요.
+            저희가 알려드릴게요! <br><br>
+            본 서비스는 현위치를 기준으로 <br>
+            200M 이내의 음식점들을 추천하는 서비스에요.
         </p>
 
         <div class="mt-6">
