마지막 페이지 문구 수정

--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -102,7 +102,7 @@
             <img src="/static/icons/favicon.png" alt="오늘 점심 뭐먹지? 로고" class="logo">
         </a>
         <h1 class="text-4xl font-bold tracking-tight text-foreground">
-            당신의 식사를 정해드려요
+            오늘의 식사를 정해드려요!
         </h1>
         <div>
             <p class="mt-4 text-muted-foreground">
